fixed some layout issues

--- a/foodspark/static/css/mystyle.css
+++ b/foodspark/static/css/mystyle.css
@@ -147,7 +147,7 @@ h1 .rest_details{
     float: left !important;
     padding-right: 40 px;
     border:1px solid #BABEC0;
-    width: 25%;
+    width: 50%;
     padding-bottom: 50px;
     text-align:center;
 }
